Static height on ad to avoid jumping

--- a/media/css/style.scss
+++ b/media/css/style.scss
@@ -290,6 +290,7 @@ section.main {
         width: 190px;
 
         section.ad {
+            height: 209px;
             margin-bottom: 28px;
 
             div.asset {
